[package]
name = "rustls-async-test"
version = "0.1.0"
edition = "2024"

[profile.release]
# strip = true
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
libc = "0.2.172"
chrono = "0.4.41"
rustls = "0.23.27"
webpki-roots = "1.0.0"
json = "0.12.4"

[dependencies.nix]
version = "0.30.1"
features = ["net", "poll", "event"]
